split interview into 2

--- a/main.tex
+++ b/main.tex
@@ -57,7 +57,7 @@
 	\cvsect{Who Am I?}
 
 	Curious compiler and runtime engineer experienced in exploring large code bases and brainstorming ways of integrating new features into them\\
-	I am interested in programming languages design, implementation, tooling and everything related for over six years and look forward to continuing working with bleeding edge technologies
+	\bio
 \end{minipage}
 \hfill
 \begin{minipage}[t]{0.55\textwidth}
