--- a/main.tex
+++ b/main.tex
@@ -72,7 +72,7 @@
 		\item[\colorbox{black}{\textcolor{white}{Native}}] C, C++, Haskell
 		\item[\colorbox{black}{\textcolor{white}{Fluent}}] Java, Zig, CMake, Go
 		\item[\colorbox{black}{\textcolor{white}{Professional}}] Idirs, Kotlin, Ruby, Python, TypeScript, C\#
-		\item[\colorbox{black}{\textcolor{white}{Basic}}] Bash, Coq, Arend, SQL, GDScript, Prolog, ECMAScript, Elixir, X86 assembly, \LaTeX
+		\item[\colorbox{black}{\textcolor{white}{Basic}}] Bash, Coq, Arend, SQL, GDScript, Prolog, ECMAScript, Elixir, x86 assembly, \LaTeX
 		\item[\colorbox{black}{\textcolor{white}{Beginner}}] Pearl, Clojure, Lua
 	\end{itemize}
 	\vspace{-0.5\baselineskip}
@@ -95,7 +95,7 @@
 		{Huawei}
 		{Worked on standard libraries development, and implemented following from scratch:
 			\begin{MyEnumerate}
-			\item Interoperability between statically and dynamically typed languages, including effective JIT compilation and working with common GC\MyCode{https://gitee.com/kprokopenko/arkcompiler_runtime_core/pulls/1}\MyCode{https://gitee.com/kprokopenko/arkcompiler_ets_runtime/pulls/1}
+			\item Interoperability between statically and dynamically typed languages, including effective JIT compilation and working with common GC\MyCode{https://gitee.com/kprokopenko/arkcompiler_runtime_core/pulls/1}\MyCode{https://gitee.com/kprokopenko/arkcompiler_ets_runtime/pulls/1} Got 2x performance increase
 			\item Type Creation API in reflections library
 			\item Documentation generator from source code\MyCode{https://gitee.com/kprokopenko/arkcompiler_ets_frontend/tree/documentation-generator/}
 			\item Bytecode files linker\MyCode{https://gitee.com/kprokopenko/arkcompiler_runtime_core/tree/linker-pull}
@@ -137,9 +137,9 @@
 		}
 	\entry
 		{2015 --- 2019}
-		{School, Computer Graphics Support Group}
-		{Physics and Mathematics Lyceum \#30, St. Petersburg}
-		{Gave talks on numerous scientific conferences. Personal projects include:
+		{School, \href{https://school30.spb.ru/cgsg/}{Computer Graphics Support Group}}
+		{\href{https://school30.spb.ru/cgsg/}{Physics and Mathematics Lyceum \#30, St. Petersburg}}
+		{Gave talks at 9 scientific conferences. Personal projects include:
 			\begin{MyEnumerate}
 			\item Realtime 3D rendering engine with OpenGL/DirectX \& WinAPI
 			\item Ray tracing engine on CPU
