--- a/headers/compiler.tex
+++ b/headers/compiler.tex
@@ -1,1 +1,1 @@
-I am interested in programming languages design, implementation, tooling and everything related for over six years and look forward to continuing working with bleeding edge technologies
+I am interested in programming languages design, implementation, tooling and everything related for over six years and look forward to continuing working on bleeding edge technologies
