--- a/main.tex
+++ b/main.tex
@@ -44,14 +44,14 @@
 	%\icon{UserSecret}{12}{she/her}\\
 	\icon{At}{12}{\href{mailto:\MyMail}{\MyMail}}\\
 	\icon{Linkedin}{12}{\MyHRef{linkedin.com/in/kp2pml30}}\\
-	\icon{Phone}{12}{\href{tel:374094115939}{+374 (94) 11 59 39}}\\
+	\icon{Phone}{12}{\href{tel:818084706253}{+81 80 8470 6253}}\\
 \end{minipage}
 \begin{minipage}[t]{0.26\textwidth}
 	\vspace{-\baselineskip}
 
 	\icon{Github}{12}{\MyHRef{github.com/kp2pml30}}\\
 	\icon{GitSquare}{12}{\MyHRef{gitee.com/kprokopenko}}\\
-	\icon{Globe}{12}{Armenia\slashsep relocatable}\\
+	\icon{Globe}{12}{Tokyo, Japan}\\
 \end{minipage}
 
 \vspace{\baselineskip}
@@ -72,9 +72,9 @@
 		\setlength{\parskip}{0.0\baselineskip}
     \setlength{\parsep}{0pt}
 		\item[\colorbox{black}{\textcolor{white}{Native}}] C, \Cpp, Haskell
-		\item[\colorbox{black}{\textcolor{white}{Fluent}}] Java, Zig, CMake, Go
-		\item[\colorbox{black}{\textcolor{white}{Professional}}] Idirs, Kotlin, Ruby, Python, TypeScript, C\#
-		\item[\colorbox{black}{\textcolor{white}{Basic}}] Bash, Coq, Arend, SQL, GDScript, Prolog, ECMAScript, Elixir, x86 assembly, \LaTeX
+		\item[\colorbox{black}{\textcolor{white}{Fluent}}] Java, Zig, CMake, Go, Rust
+		\item[\colorbox{black}{\textcolor{white}{Professional}}] Idirs, Kotlin, Ruby, Python, TypeScript, C\#, GDScript
+		\item[\colorbox{black}{\textcolor{white}{Basic}}] Bash, Coq, Arend, SQL, Prolog, ECMAScript, Elixir, x86 assembly, \LaTeX, Solidity
 		\item[\colorbox{black}{\textcolor{white}{Beginner}}] Pearl, Clojure, Lua
 	\end{itemize}
 	\vspace{-0.5\baselineskip}
@@ -83,7 +83,7 @@
 		\setlength{\itemsep}{0pt}
 		\setlength{\parskip}{0.0\baselineskip}
 	\setlength{\parsep}{0pt}
-		\item[\colorbox{black}{\textcolor{white}{Techs}}] git, POCO \Cpp, Qt5, ANTLR4, Happy, tsc, OpenJDK, Z3 \dots
+		\item[\colorbox{black}{\textcolor{white}{Techs}}] git, ANTLR4, Happy, tsc, OpenJDK, Z3, \dots
 	\end{itemize}
 \end{minipage}
 
@@ -92,14 +92,27 @@
 
 \begin{entrylist}
 	\entry
-		{2024}
-		{Software Engineer}
-		{Teza}
-		{Researched new \Cpp realtime trading platform, worked with structured data\\
-			\texttt{C++}\slashsep\texttt{Java}\slashsep\texttt{Python}}
+		{2024 --- current}
+		{Compiler Engineer}
+		{GenLayer Labs}
+		{Created wasm-based virtual machine\MyCode{https://github.com/genlayerlabs/genvm}
+			\begin{MyEnumerate}
+			\item Modified Wasmtime for project needs
+			\item Implemented ``wasm os kernel'' for blockchain specific functionality
+			\item Created blockchain storage DB
+			\item Proposed consensus algorithm rework
+		\end{MyEnumerate}
+			\vspace{-0.75\baselineskip}
+			\begin{center}\texttt{WASM}\slashsep\texttt{Rust}\slashsep\texttt{Blockchain}\end{center}}
+	%\entry
+	%	{2024}
+	%	{Software Engineer}
+	%	{Teza}
+	%	{Researched new \Cpp realtime trading platform, worked with structured data\\
+	%		\texttt{C++}\slashsep\texttt{Java}\slashsep\texttt{Python}}
 	\entry
 		{2022 --- 2024}
-		{Compiler and runtime engineer}
+		{Compiler and Runtime Engineer}
 		{Huawei R\&D}
 		{Worked on standard libraries development, and implemented following from scratch:
 			\begin{MyEnumerate}
@@ -125,14 +138,14 @@
 \begin{entrylist}
 	\entry
 		{2023 ---\\\textbf{discontinued}\\\footnotesize{Master's Degree}}
-		{Tools for developing and analyzing programs}
+		{Tools for Developing and Analyzing Programs}
 		{\href{https://en.itmo.ru}{ITMO University}}
-		{Implemented intrinsic in OpenJDK for RISC-V, built Sea of Nodes for TS
+		{Implemented intrinsic in OpenJDK for RISC-V, built Sea of Nodes for TS, implemented DPLL SAT solver
 		\vspace{-0.2\baselineskip}
 		\begin{center}\texttt{tsc}\slashsep\texttt{OpenJDK}\slashsep\texttt{Z3}\end{center}}
 	\entry
 		{2019 --- 2023\\\footnotesize{Bachelor's Degree}}
-		{Applied math and CS}
+		{Applied Math and CS}
 		{\href{https://en.itmo.ru}{ITMO University}}
 		{Among other subjects, I studied type theory, logics in category theory and semantics of programming languages. Implemented following projects:
 			\begin{MyEnumerate}
@@ -157,31 +170,32 @@
 			\begin{center}\texttt{C}\slashsep\texttt{C++}\slashsep\texttt{OpenGL}\slashsep\texttt{DirectX}\slashsep\texttt{GLSL}\slashsep\texttt{HLSL}\end{center}}
 \end{entrylist}
 
-\begin{minipage}[t]{0.3\textwidth}
-	\vspace{-2\baselineskip}
-
-	\cvsect{Languages}
-
-	\begin{tabular}{lp{0.05\textwidth}l}
-		\textbf{English} & & C1\\
-		\textbf{Russian} & & native\\
-	\end{tabular}
-\end{minipage}
-\hfill
-\begin{minipage}[t]{0.3\textwidth}
-	\vspace{-2\baselineskip}
-
-	\cvsect{Non-profit}
-
-	I regularly donate to LGBTQ+ charitable organization
-\end{minipage}
-\hfill
-\begin{minipage}[t]{0.3\textwidth}
-	\vspace{-2\baselineskip}
-
-	\cvsect{Hobbies}
-
-	I love everything related to visual art, and wish to develop a game
-\end{minipage}
+%\begin{minipage}[t]{0.3\textwidth}
+%	\vspace{-2\baselineskip}
+%
+%	\cvsect{Languages}
+%
+%	\begin{tabular}{lp{0.05\textwidth}l}
+%		\textbf{English} & & C2\\
+%		\textbf{Russian} & & native\\
+%		\textbf{Japanese} & & learning (N5)\\
+%	\end{tabular}
+%\end{minipage}
+%\hfill
+%\begin{minipage}[t]{0.3\textwidth}
+%	\vspace{-2\baselineskip}
+%
+%	\cvsect{Non-profit}
+%
+%	I regularly donate to LGBTQ+ charitable organization
+%\end{minipage}
+%\hfill
+%\begin{minipage}[t]{0.3\textwidth}
+%	\vspace{-2\baselineskip}
+%
+%	\cvsect{Hobbies}
+%
+%	I love everything related to visual art, and wish to develop a game
+%\end{minipage}
 
 \end{document}
